--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Bad Lab</title>
+	<title>Easy Lab</title>
 </head>
 <style>
 	#myheader{
@@ -47,7 +47,7 @@
 </style>
 <body style="font-family: Times New Roman">
 <div id='header'>
-<h1 >Bad Lab</h1>
+<h1 >Easy Lab</h1>
 </div>
 
 <div id="nav" >
