change the place of img src

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </h2>
 </div>
 <div>
-	<img src="skyline-buildings-new-york-skyscrapers.jpg" height="300px" width=100%>
+	<img src="./img/skyline-buildings-new-york-skyscrapers.jpg" height="300px" width=100%>
 </div>
 <div id='section'>
 <h2>Goals</h2>
