--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div id="nav" >
 <h2>
 <a href="https://beginml.wordpress.com/" style="text-decoration:blink">项目</a>
-<a href="https://beginml.wordpress.com/" style="text-decoration:blink">* 关于</a>
+<a href="about.html" style="text-decoration:blink">* 关于</a>
 <a href="https://beginml.wordpress.com/" style="text-decoration:blink">* 书籍</a>
 <a href="https://beginml.wordpress.com/" style="text-decoration:blink">* 联系</a>
 </h2>
