add whugpa to projects

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	}
 	#nav {
 	    line-height:2px;
-	    background-color:#9AFF9A;
+	    background-color:#33CCFF;
 
 	    padding:2px;
 
@@ -77,6 +77,7 @@
 		<li>武汉大学图书馆登陆验证码  Crack the log captcha of whulib using SVM, a classic classification algorithm in ml.</li>
 		<li>Translation From English To Chinese of book <cite>Model-Based Machine Learning</cite></li>
 		<li>A PDF processor converting scanned pdfs into text or diagram based pdfs to decrease the storage size of PDFs.</li>
+		<li><a href="https://github.com/easylab/whugpa">武汉大学成绩计算器</a> Wrote By <cite><a href="https://github.com/easylab">Easy Lab</a></cite></li>
 	</ol>
 
 </p>
