--- a/index.html
+++ b/index.html
@@ -44,24 +44,45 @@
 	#content-type{
 		font-size: 20px;
 	}
+	.frameword{
+		width:1000px;
+		margin-left: auto;
+		margin-right: auto;
+		background-color: #FFFF99;
+	}
 </style>
-<body style="font-family: Times New Roman">
+<body style="font-family: Times New Roman" class="frameword">
 <div id='header'>
 <h1 >Easy Lab</h1>
 </div>
 
 <div id="nav" >
 <h2>
-<a href="https://beginml.wordpress.com/" style="text-decoration:blink">项目</a>
-<a href="about.html" style="text-decoration:blink">* 关于</a>
-<a href="https://beginml.wordpress.com/" style="text-decoration:blink">* 书籍</a>
-<a href="https://beginml.wordpress.com/" style="text-decoration:blink">* 联系</a>
+<a href="https://beginml.wordpress.com/" style="text-decoration:blink;color:red">项目</a>
+<a href="about.html" style="text-decoration:blink;color:red">* 关于</a>
+<a href="https://beginml.wordpress.com/" style="text-decoration:blink;color:red">* 书籍</a>
+<a href="https://beginml.wordpress.com/" style="text-decoration:blink;color:red">* 联系</a>
 </h2>
 </div>
 <div>
-	<img src="./img/skyline-buildings-new-york-skyscrapers.jpg" height="300px" width=100%>
+	<img src="./img/skyline-buildings-new-york-skyscrapers.jpg" height="300px" width=100% />
+</div>
+<div id="section">
+	<h2>Introduction</h2>
+	<hr>
+	<p id="content-type">
+	<cite>"Easy Lab"</cite> was initially launched by Amos to do easy researches.And as time goes on, we are still focus on easy researches
+	because we are not clever. At present <cite>"Easy Lab"</cite> has one and only one employer in China, exploring everthing that's simple. We are diligent and work as much as two hours per week.<br /> <br />
+	<cite>"Easy Lab"</cite> now mainly focus on:<br />
+	<ul id="content-type">
+		<li>Machine Learning, their applications on three-dimentional cloud point</li>
+		<li>Matrix Analysis</li>
+		<li>Chaos, swarm intelligence</li>
+		<li>Probabilistic Graphical Models</li>
+	</p>
 </div>
 <div id='section'>
+
 <h2>Goals</h2>
 <p> 
 <ol id="content-type">
