--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	<h2>Introduction</h2>
 	<hr>
 	<p id="content-type">
-	<cite>"Easy Lab"</cite> was initially launched by Amos to do easy researches.And as time goes on, we are still focus on easy researches
+	<cite>"Easy Lab"</cite> was initially launched by Amos to do easy researches.And as time goes on, we are still focusing on easy researches
 	because we are not clever. At present <cite>"Easy Lab"</cite> has one and only one employer in China, exploring everthing that's simple. We are diligent and work as much as two hours per week.<br /> <br />
 	<cite>"Easy Lab"</cite> now mainly focus on:<br />
 	<ul id="content-type">
