--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 		margin-right: auto;
 		background-color: #FFFF99;
 	}
+	#homapagelink{
+		color:#A00000;
+		text-decoration: blink;
+	}
 </style>
 <body style="font-family: Times New Roman" class="frameword">
 <div id='header'>
@@ -72,13 +76,12 @@
 	<hr>
 	<p id="content-type">
 	<cite>"Easy Lab"</cite> was initially launched by Amos to do easy researches.And as time goes on, we are still focusing on easy researches
-	because we are not clever. At present <cite>"Easy Lab"</cite> has one and only one employer in China, exploring everthing that's simple. We are diligent and work as much as two hours per week.<br /> <br />
+	because we are not clever. At present <cite>"Easy Lab"</cite> has one and only one employer in China, exploring everthing that's simple. We are diligent and work as many as two hours per week.<br /> <br />
 	<cite>"Easy Lab"</cite> now mainly focus on:<br />
 	<ul id="content-type">
-		<li>Machine Learning, their applications on three-dimentional cloud point</li>
+		<li>ML Related Models and Applications</li>
 		<li>Matrix Analysis</li>
-		<li>Chaos, swarm intelligence</li>
-		<li>Probabilistic Graphical Models</li>
+		<li>Chaos</li>
 	</p>
 </div>
 <div id='section'>
@@ -98,7 +101,7 @@
 		<li>武汉大学图书馆登陆验证码  Crack the log captcha of whulib using SVM, a classic classification algorithm in ml.</li>
 		<li>Translation From English To Chinese of book <cite>Model-Based Machine Learning</cite></li>
 		<li>A PDF processor converting scanned pdfs into text or diagram based pdfs to decrease the storage size of PDFs.</li>
-		<li><a href="https://github.com/easylab/whugpa">武汉大学成绩计算器</a> Wrote By <cite><a href="https://github.com/easylab">Easy Lab</a></cite></li>
+		<li><a href="https://github.com/easylab/whugpa" id="homapagelink">武汉大学成绩计算器</a> Wrote By <cite><a href="https://github.com/easylab" id="homapagelink">Easy Lab</a></cite></li>
 	</ol>
 
 </p>
@@ -110,6 +113,7 @@
 		<ol id="content-type">
 			<li><cite>Model-Based Machine Learning</cite></li>
 			<li><cite>Machine Learning: The Art and Science of Algorithms that Make Sense of Data</cite></li>
+			<li><cite>Think Python:How to Think Like a Computer Scientist</cite> by <cite>Allen Downey</cite></li>
 		</ol>
 	</p>
 </div>
