add link to the image and the title 'easy lab'

--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
 	}
 </style>
 <body style="font-family: Times New Roman" class="frameword">
+<a href="https://easylab.github.io/" style="text-decoration: blink">
 <div id='header'>
 <h1 >Easy Lab</h1>
 </div>
-
+</a>
 <div id="nav" >
 <h2>
 <a href="https://beginml.wordpress.com/" style="text-decoration:blink;color:red">项目</a>
@@ -69,7 +70,8 @@
 </h2>
 </div>
 <div>
-	<img src="./img/skyline-buildings-new-york-skyscrapers.jpg" height="300px" width=100% />
+	<a href="https://easylab.github.io/">
+	<img src="./img/skyline-buildings-new-york-skyscrapers.jpg" height="300px" width=100% /></a>
 </div>
 <div id="section">
 	<h2>Introduction</h2>
@@ -79,7 +81,7 @@
 	because we are not clever. At present <cite>"Easy Lab"</cite> has one and only one employer in China, exploring everthing that's simple. We are diligent and work as many as two hours per week.<br /> <br />
 	<cite>"Easy Lab"</cite> now mainly focus on:<br />
 	<ul id="content-type">
-		<li>ML Related Models and Applications</li>
+		<li>Machine Learning</li>
 		<li>Matrix Analysis</li>
 		<li>Chaos</li>
 	</p>
@@ -87,6 +89,7 @@
 <div id='section'>
 
 <h2>Goals</h2>
+<hr>
 <p> 
 <ol id="content-type">
 <li>to provide some materials of ml in varieties of forms, such as books, codes and videos.</li>
@@ -96,6 +99,7 @@
 
 <div id='section'>
 <h2>Projects</h2>
+<hr>
 <p>
 	<ol id="content-type">
 		<li>武汉大学图书馆登陆验证码  Crack the log captcha of whulib using SVM, a classic classification algorithm in ml.</li>
@@ -105,10 +109,13 @@
 	</ol>
 
 </p>
+<!-- <hr> -->
 </div>
+
 
 <div id="section">
 	<h2>Books</h2>
+	<hr>
 	<p>
 		<ol id="content-type">
 			<li><cite>Model-Based Machine Learning</cite></li>
