将 样式单独放在book.css中,添加了books.html修改了index.html一些样式

--- a/index.html
+++ b/index.html
@@ -2,60 +2,12 @@
 <html>
 <head>
 	<title>Easy Lab</title>
+	<link rel="shortcut icon" type="image/x-icon" href="./img/el.ico">
+	<link rel="stylesheet" type="text/css" href="./css/book.css">
 </head>
 <style>
-	#myheader{
-		background-color: #9AFF9A;
-		text-align:center;
-
-	}
-	#header{
-	    background-color:white;
-	    color:black;
-	    text-align:center;
-	    padding:1px
-	    padding-left:10%; 
-	}
-	#nav {
-	    line-height:2px;
-	    background-color:#33CCFF;
-
-	    padding:2px;
-
-
-	    text-align: center;
-	}
-	#section {
-	    width:device-width;
-	    float:left;
-	    clear: both;
-	    padding:10px; 
-	    padding-right: 10%;
-	    padding-left: 10%;
-	}
-	#footer {
-	    background-color:black;
-	    color:white;
-	    clear:both;
-	    text-align:center;
-	    padding:5px; 
-	    width:device-width;
-	}	
-	#content-type{
-		font-size: 20px;
-	}
-	.frameword{
-		width:1000px;
-		margin-left: auto;
-		margin-right: auto;
-		background-color: #FFFF99;
-	}
-	#homapagelink{
-		color:#A00000;
-		text-decoration: blink;
-	}
 </style>
-<body style="font-family: Times New Roman" class="frameword">
+<body style="font-family: Times New Roman" class="framework">
 <a href="https://easylab.github.io/" style="text-decoration: blink">
 <div id='header'>
 <h1 >Easy Lab</h1>
@@ -63,10 +15,10 @@
 </a>
 <div id="nav" >
 <h2>
-<a href="https://beginml.wordpress.com/" style="text-decoration:blink;color:red">项目</a>
-<a href="about.html" style="text-decoration:blink;color:red">* 关于</a>
-<a href="https://beginml.wordpress.com/" style="text-decoration:blink;color:red">* 书籍</a>
-<a href="https://beginml.wordpress.com/" style="text-decoration:blink;color:red">* 联系</a>
+<a href="https://beginml.wordpress.com/" id="navitem" >项目</a>
+<a href="about.html" id="navitem" >* 关于</a>
+<a href="https://beginml.wordpress.com/" id="navitem" >* 书籍</a>
+<a href="https://beginml.wordpress.com/" id="navitem" >* 联系</a>
 </h2>
 </div>
 <div>
