--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Easy Lab</title>
-	<link rel="shortcut icon" type="image/x-icon" href="./img/el.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="./img/elicon.png">
 	<link rel="stylesheet" type="text/css" href="./css/book.css">
 </head>
 <style>
@@ -17,7 +17,7 @@
 <h2>
 <a href="https://beginml.wordpress.com/" id="navitem" >项目</a>
 <a href="about.html" id="navitem" >* 关于</a>
-<a href="https://beginml.wordpress.com/" id="navitem" >* 书籍</a>
+<a href="./books.html" id="navitem" >* 书籍</a>
 <a href="https://beginml.wordpress.com/" id="navitem" >* 联系</a>
 </h2>
 </div>
