跟新了导航栏链接

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 </a>
 <div id="nav" >
 <h2>
-<a href="https://beginml.wordpress.com/" id="navitem" >项目</a>
-<a href="about.html" id="navitem" >* 关于</a>
+<a href="./projects.html" id="navitem" >项目</a>
+<a href="./about.html" id="navitem" >* 关于</a>
 <a href="./books.html" id="navitem" >* 书籍</a>
-<a href="https://beginml.wordpress.com/" id="navitem" >* 联系</a>
+<a href="./contacts.html" id="navitem" >* 联系</a>
 </h2>
 </div>
 <div>
